more work on getting rail tests passing with the new data source